# Backend

./: client.py  flake.nix  main.py  pyproject.toml  utils.py
configuration/: database.py  pinecone.py
controllers/: areas.py  auth.py  chatbot.py  community_chat.py  sos.py  tickets.py
dependencies/: auth.py  openai.py
handlers/: areas.py  auth.py  chatbot.py  community_chat.py  sos.py  tickets.py
models/: community_chat.py  sos.py  ticket.py  user.py
schemas/: __init__.py  areas.py  chatbot.py  community_chat.py  sos.py  ticket.py  token.py  user.py
